--- a/t_create_logicfile.dita
+++ b/t_create_logicfile.dita
@@ -6,6 +6,28 @@
 Through this document you can learn how to create a logic pro x file. 
   </shortdesc>
   <taskbody>
-
+<context>
+        <p> Logic Pro X projects are contained within logic files. In order to manage your projects successfully, you must understand how to create a logic file.  </p>
+    </context>
+    <steps>
+      <step>
+        <cmd>Open the Logic Pro X application.</cmd>
+      </step>
+      <step>
+        <cmd>Select "Empty Project" in the top left corner.</cmd>
+      </step>
+      <step>
+        <cmd>Select "Choose" in the bottom right corner. </cmd>
+      </step>
+      <step>
+        <cmd>Select "File" in the top left corner.</cmd>
+      </step>
+      <step>
+        <cmd>Select "Save File As" in the drop down menu.</cmd>
+      </step>
+      <step>
+        <cmd>Enter a name for your file and select "save."</cmd>
+      </step>
+    </steps>
   </taskbody>
 </task>
